<resources>
    <string name="app_name">Cartão de Visitas</string>
    <string name="bot_o_de_adicionar_cart_o_de_visita">Botão de adicionar cartão de visita</string>
    <string name="visit_card_rs">Cartão de Visitas</string>
    <string name="cd_bt_close">Botão de sair</string>
    <string name="hint_username">Nome</string>
    <string name="hint_phone">Telefone</string>
    <string name="hint_email">E-mail</string>
    <string name="hint_company_name">Nome da empresa</string>
    <string name="hint_color">Cor</string>
    <string name="bt_finalize_rs">Finalizar</string>
    <string name="label_new_card_rs">Novo Cartão</string>
    <string name="label_share">compartilhar</string>
</resources>